--- a/Project.ipynb
+++ b/Project.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Goal of project is to clean the dataset and perform some intital analysis on it. \n",
     "In particular, we check if there is a correlation between price and mileage of different brands of cars.\n",
-    "<a href='https://www.kaggle.com/datasets/sijovm/used-cars-data-from-ebay-kleinanzeigen'> Autos.csv </a> is a dataset of used cars from eBay Kleinanzaigan"
+    "<a href='https://www.kaggle.com/datasets/sijovm/used-cars-data-from-ebay-kleinanzeigen'> Autos.csv </a> is the  dataset used for this analysis"
    ]
   },
   {
